@@ -23,7 +23,9 @@ SOFTWARE.
 */
 package com.github.alexisjehan.javanilla.lang.array;
 
-import com.github.alexisjehan.javanilla.util.iteration.Iterables;
+import com.github.alexisjehan.javanilla.misc.quality.Ensure;
+import com.github.alexisjehan.javanilla.misc.quality.Equals;
+import com.github.alexisjehan.javanilla.misc.quality.ToString;
 
 import java.util.Arrays;
 import java.util.List;
@@ -68,9 +70,7 @@ public final class BooleanArrays {
 	 * @since 1.1.0
 	 */
 	public static boolean[] nullToDefault(final boolean[] array, final boolean[] defaultArray) {
-		if (null == defaultArray) {
-			throw new NullPointerException("Invalid default array (not null expected)");
-		}
+		Ensure.notNull("defaultArray", defaultArray);
 		return null != array ? array : defaultArray;
 	}
 
@@ -93,10 +93,10 @@ public final class BooleanArrays {
 	 * @since 1.1.0
 	 */
 	public static boolean[] emptyToDefault(final boolean[] array, final boolean[] defaultArray) {
-		if (null != defaultArray && 0 == defaultArray.length) {
-			throw new IllegalArgumentException("Invalid default array (not empty expected)");
+		if (null != defaultArray) {
+			Ensure.notNullAndNotEmpty("defaultArray", defaultArray);
 		}
-		return null == array || 0 != array.length ? array : defaultArray;
+		return null == array || !isEmpty(array) ? array : defaultArray;
 	}
 
 	/**
@@ -107,90 +107,8 @@ public final class BooleanArrays {
 	 * @since 1.2.0
 	 */
 	public static boolean isEmpty(final boolean[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		return 0 == array.length;
-	}
-
-	/**
-	 * <p>Get the first index of the {@code boolean} value in the {@code boolean} array.</p>
-	 * @param array the {@code boolean} array to lookup
-	 * @param value the {@code boolean} value to search
-	 * @return the first index of the {@code boolean} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code boolean} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final boolean[] array, final boolean value) {
-		return indexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the first index of the {@code boolean} value in the {@code boolean} array starting from the given
-	 * index.</p>
-	 * @param array the {@code boolean} array to lookup
-	 * @param value the {@code boolean} value to search
-	 * @param fromIndex the starting index
-	 * @return the first index of the {@code boolean} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code boolean} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final boolean[] array, final boolean value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = fromIndex; i < array.length; ++i) {
-				if (value == array[i]) {
-					return i;
-				}
-			}
-		}
-		return -1;
-	}
-
-	/**
-	 * <p>Get the last index of the {@code boolean} value in the {@code boolean} array.</p>
-	 * @param array the {@code boolean} array to lookup
-	 * @param value the {@code boolean} value to search
-	 * @return the last index of the {@code boolean} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code boolean} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final boolean[] array, final boolean value) {
-		return lastIndexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the last index of the {@code boolean} value in the {@code boolean} array starting from the given
-	 * index.</p>
-	 * @param array the {@code boolean} array to lookup
-	 * @param value the {@code boolean} value to search
-	 * @param fromIndex the starting index
-	 * @return the last index of the {@code boolean} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code boolean} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final boolean[] array, final boolean value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = array.length - 1; i > fromIndex; --i) {
-				if (value == array[i]) {
-					return i;
-				}
-			}
-		}
-		return -1;
 	}
 
 	/**
@@ -204,21 +122,14 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAny(final boolean[] array, final boolean... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					return true;
 				}
 			}
@@ -237,22 +148,15 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAll(final boolean[] array, final boolean... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -274,22 +178,15 @@ public final class BooleanArrays {
 	 * @since 1.1.0
 	 */
 	public static boolean containsOnce(final boolean[] array, final boolean... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					if (contained) {
 						return false;
 					}
@@ -313,22 +210,15 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsOnly(final boolean[] array, final boolean... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var element : array) {
 			var contained = false;
 			for (final var value : values) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -341,6 +231,100 @@ public final class BooleanArrays {
 	}
 
 	/**
+	 * <p>Get the first index of the {@code boolean} value in the {@code boolean} array.</p>
+	 * @param array the {@code boolean} array to iterate
+	 * @param value the {@code boolean} value to search
+	 * @return the first index of the {@code boolean} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code boolean} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final boolean[] array, final boolean value) {
+		return indexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the first index of the {@code boolean} value in the {@code boolean} array starting from the given
+	 * index.</p>
+	 * @param array the {@code boolean} array to iterate
+	 * @param value the {@code boolean} value to search
+	 * @param fromIndex the starting index
+	 * @return the first index of the {@code boolean} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code boolean} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final boolean[] array, final boolean value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = fromIndex; i < array.length; ++i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Get the last index of the {@code boolean} value in the {@code boolean} array.</p>
+	 * @param array the {@code boolean} array to iterate
+	 * @param value the {@code boolean} value to search
+	 * @return the last index of the {@code boolean} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code boolean} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final boolean[] array, final boolean value) {
+		return lastIndexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the last index of the {@code boolean} value in the {@code boolean} array starting from the given
+	 * index.</p>
+	 * @param array the {@code boolean} array to iterate
+	 * @param value the {@code boolean} value to search
+	 * @param fromIndex the starting index
+	 * @return the last index of the {@code boolean} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code boolean} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final boolean[] array, final boolean value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = array.length - 1; i > fromIndex; --i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Calculate the number of occurrences of the {@code boolean} value in the {@code boolean} array.</p>
+	 * @param array the {@code boolean} array to iterate
+	 * @param value the {@code boolean} value of the frequency to calculate
+	 * @return the frequency of the {@code boolean} value
+	 * @throws NullPointerException if the {@code boolean} array is {@code null}
+	 * @since 1.3.0
+	 */
+	public static int frequency(final boolean[] array, final boolean value) {
+		Ensure.notNull("array", array);
+		if (isEmpty(array)) {
+			return 0;
+		}
+		var frequency = 0;
+		for (final var element : array) {
+			if (Equals.equals(value, element)) {
+				++frequency;
+			}
+		}
+		return frequency;
+	}
+
+	/**
 	 * <p>Shuffle values in the given {@code boolean} array using the Fisher-Yates algorithm.</p>
 	 * @see <a href="https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle">https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle</a>
 	 * @param array the {@code boolean} array to shuffle
@@ -348,9 +332,7 @@ public final class BooleanArrays {
 	 * @since 1.2.0
 	 */
 	public static void shuffle(final boolean[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			final var random = ThreadLocalRandom.current();
 			for (var i = 0; i < array.length; ++i) {
@@ -366,9 +348,7 @@ public final class BooleanArrays {
 	 * @since 1.2.0
 	 */
 	public static void reverse(final boolean[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			for (var i = 0; i < array.length / 2; ++i) {
 				swap(array, i, array.length - i - 1);
@@ -381,30 +361,21 @@ public final class BooleanArrays {
 	 * @param array the {@code boolean} array to reorder
 	 * @param indexes indexes to use
 	 * @throws NullPointerException if the {@code boolean} array or the indexes array is {@code null}
-	 * @throws IllegalArgumentException if {@code boolean} array and indexes array lengths are not the same or if
-	 * indexes are not distinct
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if {@code boolean} array is empty, if the {@code boolean} array length is not
+	 * equal to the indexes array length, if indexes are not distinct or if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void reorder(final boolean[] array, final int... indexes) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == indexes) {
-			throw new NullPointerException("Invalid indexes (not null expected)");
-		}
-		if (array.length != indexes.length) {
-			throw new IllegalArgumentException("Invalid array and indexes lengths: " + array.length + " and " + indexes.length + " (same expected)");
-		}
-		if (array.length != Arrays.stream(indexes).distinct().count()) {
-			throw new IllegalArgumentException("Invalid indexes (distinct expected)");
+		Ensure.notNullAndNotEmpty("array", array);
+		Ensure.notNull("indexes", indexes);
+		Ensure.equalTo("indexes length", indexes.length, array.length);
+		if (indexes.length != Arrays.stream(indexes).distinct().count()) {
+			throw new IllegalArgumentException("Invalid indexes: " + ToString.toString(indexes) + " (distinct expected)");
 		}
 		if (1 < array.length) {
 			for (var i = 0; i < array.length; ++i) {
 				var j = indexes[i];
-				if (0 > j || array.length - 1 < j) {
-					throw new IndexOutOfBoundsException("Invalid index: " + j + " (between 0 and " + (array.length - 1) + " expected)");
-				}
+				Ensure.between("index", j, 0, array.length - 1);
 				while (j < i) {
 					j = indexes[j];
 				}
@@ -419,19 +390,13 @@ public final class BooleanArrays {
 	 * @param index1 the index of the first value
 	 * @param index2 the index of the second value
 	 * @throws NullPointerException if the {@code boolean} array is {@code null}
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void swap(final boolean[] array, final int index1, final int index2) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 > index1 || array.length - 1 < index1) {
-			throw new IndexOutOfBoundsException("Invalid first index: " + index1 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
-		if (0 > index2 || array.length - 1 < index2) {
-			throw new IndexOutOfBoundsException("Invalid second index: " + index2 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
+		Ensure.notNull("array", array);
+		Ensure.between("index1", index1, 0, array.length - 1);
+		Ensure.between("index2", index2, 0, array.length - 1);
 		if (index1 != index2) {
 			final var value = array[index1];
 			array[index1] = array[index2];
@@ -447,10 +412,8 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean[] concat(final boolean[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return concat(Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return concat(List.of(arrays));
 	}
 
 	/**
@@ -461,14 +424,7 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean[] concat(final List<boolean[]> arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
+		Ensure.notNullAndNotNullElements("arrays", arrays);
 		final var size = arrays.size();
 		if (0 == size) {
 			return EMPTY;
@@ -495,10 +451,8 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean[] join(final boolean[] separator, final boolean[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return join(separator, Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return join(separator, List.of(arrays));
 	}
 
 	/**
@@ -511,18 +465,9 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean[] join(final boolean[] separator, final List<boolean[]> arrays) {
-		if (null == separator) {
-			throw new NullPointerException("Invalid separator (not null expected)");
-		}
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
-		if (0 == separator.length) {
+		Ensure.notNull("separator", separator);
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		if (isEmpty(separator)) {
 			return concat(arrays);
 		}
 		final var size = arrays.size();
@@ -549,12 +494,12 @@ public final class BooleanArrays {
 
 	/**
 	 * <p>Create a {@code boolean} array from a single {@code boolean}.</p>
-	 * @param b the {@code boolean} to convert
+	 * @param bo the {@code boolean} to convert
 	 * @return the created {@code boolean} array
 	 * @since 1.1.0
 	 */
-	public static boolean[] singleton(final boolean b) {
-		return of(b);
+	public static boolean[] singleton(final boolean bo) {
+		return of(bo);
 	}
 
 	/**
@@ -565,10 +510,8 @@ public final class BooleanArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean[] of(final boolean... booleans) {
-		if (null == booleans) {
-			throw new NullPointerException("Invalid booleans (not null expected)");
-		}
-		if (0 == booleans.length) {
+		Ensure.notNull("booleans", booleans);
+		if (isEmpty(booleans)) {
 			return EMPTY;
 		}
 		return booleans;
@@ -582,10 +525,8 @@ public final class BooleanArrays {
 	 * @since 1.2.0
 	 */
 	public static boolean[] of(final Boolean[] boxedBooleans) {
-		if (null == boxedBooleans) {
-			throw new NullPointerException("Invalid Booleans (not null expected)");
-		}
-		if (0 == boxedBooleans.length) {
+		Ensure.notNull("boxedBooleans", boxedBooleans);
+		if (ObjectArrays.isEmpty(boxedBooleans)) {
 			return EMPTY;
 		}
 		final var booleans = new boolean[boxedBooleans.length];
@@ -603,8 +544,9 @@ public final class BooleanArrays {
 	 * @since 1.2.0
 	 */
 	public static Boolean[] toBoxed(final boolean[] booleans) {
-		if (null == booleans) {
-			throw new NullPointerException("Invalid booleans (not null expected)");
+		Ensure.notNull("booleans", booleans);
+		if (isEmpty(booleans)) {
+			return ObjectArrays.empty(Boolean.class);
 		}
 		final var boxedBooleans = new Boolean[booleans.length];
 		for (var i = 0; i < boxedBooleans.length; ++i) {
