@@ -24,7 +24,9 @@ SOFTWARE.
 package com.github.alexisjehan.javanilla.lang.array;
 
 import com.github.alexisjehan.javanilla.lang.Strings;
-import com.github.alexisjehan.javanilla.util.iteration.Iterables;
+import com.github.alexisjehan.javanilla.misc.quality.Ensure;
+import com.github.alexisjehan.javanilla.misc.quality.Equals;
+import com.github.alexisjehan.javanilla.misc.quality.ToString;
 
 import java.nio.ByteOrder;
 import java.util.Arrays;
@@ -82,9 +84,7 @@ public final class ByteArrays {
 	 * @since 1.1.0
 	 */
 	public static byte[] nullToDefault(final byte[] array, final byte[] defaultArray) {
-		if (null == defaultArray) {
-			throw new NullPointerException("Invalid default array (not null expected)");
-		}
+		Ensure.notNull("defaultArray", defaultArray);
 		return null != array ? array : defaultArray;
 	}
 
@@ -107,10 +107,10 @@ public final class ByteArrays {
 	 * @since 1.1.0
 	 */
 	public static byte[] emptyToDefault(final byte[] array, final byte[] defaultArray) {
-		if (null != defaultArray && 0 == defaultArray.length) {
-			throw new IllegalArgumentException("Invalid default array (not empty expected)");
+		if (null != defaultArray) {
+			Ensure.notNullAndNotEmpty("defaultArray", defaultArray);
 		}
-		return null == array || 0 != array.length ? array : defaultArray;
+		return null == array || !isEmpty(array) ? array : defaultArray;
 	}
 
 	/**
@@ -121,88 +121,8 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static boolean isEmpty(final byte[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		return 0 == array.length;
-	}
-
-	/**
-	 * <p>Get the first index of the {@code byte} value in the {@code byte} array.</p>
-	 * @param array the {@code byte} array to lookup
-	 * @param value the {@code byte} value to search
-	 * @return the first index of the {@code byte} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code byte} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final byte[] array, final byte value) {
-		return indexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the first index of the {@code byte} value in the {@code byte} array starting from the given index.</p>
-	 * @param array the {@code byte} array to lookup
-	 * @param value the {@code byte} value to search
-	 * @param fromIndex the starting index
-	 * @return the first index of the {@code byte} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code byte} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final byte[] array, final byte value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = fromIndex; i < array.length; ++i) {
-				if (value == array[i]) {
-					return i;
-				}
-			}
-		}
-		return -1;
-	}
-
-	/**
-	 * <p>Get the last index of the {@code byte} value in the {@code byte} array.</p>
-	 * @param array the {@code byte} array to lookup
-	 * @param value the {@code byte} value to search
-	 * @return the last index of the {@code byte} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code byte} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final byte[] array, final byte value) {
-		return lastIndexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the last index of the {@code byte} value in the {@code byte} array starting from the given index.</p>
-	 * @param array the {@code byte} array to lookup
-	 * @param value the {@code byte} value to search
-	 * @param fromIndex the starting index
-	 * @return the last index of the {@code byte} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code byte} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final byte[] array, final byte value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = array.length - 1; i > fromIndex; --i) {
-				if (value == array[i]) {
-					return i;
-				}
-			}
-		}
-		return -1;
 	}
 
 	/**
@@ -215,21 +135,14 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAny(final byte[] array, final byte... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					return true;
 				}
 			}
@@ -247,22 +160,15 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAll(final byte[] array, final byte... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -284,22 +190,15 @@ public final class ByteArrays {
 	 * @since 1.1.0
 	 */
 	public static boolean containsOnce(final byte[] array, final byte... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					if (contained) {
 						return false;
 					}
@@ -323,22 +222,15 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsOnly(final byte[] array, final byte... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var element : array) {
 			var contained = false;
 			for (final var value : values) {
-				if (value == element) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -351,6 +243,98 @@ public final class ByteArrays {
 	}
 
 	/**
+	 * <p>Get the first index of the {@code byte} value in the {@code byte} array.</p>
+	 * @param array the {@code byte} array to iterate
+	 * @param value the {@code byte} value to search
+	 * @return the first index of the {@code byte} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code byte} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final byte[] array, final byte value) {
+		return indexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the first index of the {@code byte} value in the {@code byte} array starting from the given index.</p>
+	 * @param array the {@code byte} array to iterate
+	 * @param value the {@code byte} value to search
+	 * @param fromIndex the starting index
+	 * @return the first index of the {@code byte} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code byte} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final byte[] array, final byte value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = fromIndex; i < array.length; ++i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Get the last index of the {@code byte} value in the {@code byte} array.</p>
+	 * @param array the {@code byte} array to iterate
+	 * @param value the {@code byte} value to search
+	 * @return the last index of the {@code byte} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code byte} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final byte[] array, final byte value) {
+		return lastIndexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the last index of the {@code byte} value in the {@code byte} array starting from the given index.</p>
+	 * @param array the {@code byte} array to iterate
+	 * @param value the {@code byte} value to search
+	 * @param fromIndex the starting index
+	 * @return the last index of the {@code byte} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code byte} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final byte[] array, final byte value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = array.length - 1; i > fromIndex; --i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Calculate the number of occurrences of the {@code byte} value in the {@code byte} array.</p>
+	 * @param array the {@code byte} array to iterate
+	 * @param value the {@code byte} value of the frequency to calculate
+	 * @return the frequency of the {@code byte} value
+	 * @throws NullPointerException if the {@code byte} array is {@code null}
+	 * @since 1.3.0
+	 */
+	public static int frequency(final byte[] array, final byte value) {
+		Ensure.notNull("array", array);
+		if (isEmpty(array)) {
+			return 0;
+		}
+		var frequency = 0;
+		for (final var element : array) {
+			if (Equals.equals(value, element)) {
+				++frequency;
+			}
+		}
+		return frequency;
+	}
+
+	/**
 	 * <p>Shuffle values in the given {@code byte} array using the Fisher-Yates algorithm.</p>
 	 * @see <a href="https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle">https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle</a>
 	 * @param array the {@code byte} array to shuffle
@@ -358,9 +342,7 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static void shuffle(final byte[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			final var random = ThreadLocalRandom.current();
 			for (var i = 0; i < array.length; ++i) {
@@ -376,9 +358,7 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static void reverse(final byte[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			for (var i = 0; i < array.length / 2; ++i) {
 				swap(array, i, array.length - i - 1);
@@ -391,30 +371,21 @@ public final class ByteArrays {
 	 * @param array the {@code byte} array to reorder
 	 * @param indexes indexes to use
 	 * @throws NullPointerException if the {@code byte} array or the indexes array is {@code null}
-	 * @throws IllegalArgumentException if {@code byte} array and indexes array lengths are not the same or if
-	 * indexes are not distinct
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if {@code byte} array is empty, if the {@code byte} array length is not equal to
+	 * the indexes array length, if indexes are not distinct or if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void reorder(final byte[] array, final int... indexes) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == indexes) {
-			throw new NullPointerException("Invalid indexes (not null expected)");
-		}
-		if (array.length != indexes.length) {
-			throw new IllegalArgumentException("Invalid array and indexes lengths: " + array.length + " and " + indexes.length + " (same expected)");
-		}
-		if (array.length != Arrays.stream(indexes).distinct().count()) {
-			throw new IllegalArgumentException("Invalid indexes (distinct expected)");
+		Ensure.notNullAndNotEmpty("array", array);
+		Ensure.notNull("indexes", indexes);
+		Ensure.equalTo("indexes length", indexes.length, array.length);
+		if (indexes.length != Arrays.stream(indexes).distinct().count()) {
+			throw new IllegalArgumentException("Invalid indexes: " + ToString.toString(indexes) + " (distinct expected)");
 		}
 		if (1 < array.length) {
 			for (var i = 0; i < array.length; ++i) {
 				var j = indexes[i];
-				if (0 > j || array.length - 1 < j) {
-					throw new IndexOutOfBoundsException("Invalid index: " + j + " (between 0 and " + (array.length - 1) + " expected)");
-				}
+				Ensure.between("index", j, 0, array.length - 1);
 				while (j < i) {
 					j = indexes[j];
 				}
@@ -429,19 +400,13 @@ public final class ByteArrays {
 	 * @param index1 the index of the first value
 	 * @param index2 the index of the second value
 	 * @throws NullPointerException if the {@code byte} array is {@code null}
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void swap(final byte[] array, final int index1, final int index2) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 > index1 || array.length - 1 < index1) {
-			throw new IndexOutOfBoundsException("Invalid first index: " + index1 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
-		if (0 > index2 || array.length - 1 < index2) {
-			throw new IndexOutOfBoundsException("Invalid second index: " + index2 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
+		Ensure.notNull("array", array);
+		Ensure.between("index1", index1, 0, array.length - 1);
+		Ensure.between("index2", index2, 0, array.length - 1);
 		if (index1 != index2) {
 			final var value = array[index1];
 			array[index1] = array[index2];
@@ -457,10 +422,8 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] concat(final byte[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return concat(Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return concat(List.of(arrays));
 	}
 
 	/**
@@ -471,14 +434,7 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] concat(final List<byte[]> arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
+		Ensure.notNullAndNotNullElements("arrays", arrays);
 		final var size = arrays.size();
 		if (0 == size) {
 			return EMPTY;
@@ -505,10 +461,8 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] join(final byte[] separator, final byte[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return join(separator, Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return join(separator, List.of(arrays));
 	}
 
 	/**
@@ -521,18 +475,9 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] join(final byte[] separator, final List<byte[]> arrays) {
-		if (null == separator) {
-			throw new NullPointerException("Invalid separator (not null expected)");
-		}
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
-		if (0 == separator.length) {
+		Ensure.notNull("separator", separator);
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		if (isEmpty(separator)) {
 			return concat(arrays);
 		}
 		final var size = arrays.size();
@@ -575,10 +520,8 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] of(final byte... bytes) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (0 == bytes.length) {
+		Ensure.notNull("bytes", bytes);
+		if (isEmpty(bytes)) {
 			return EMPTY;
 		}
 		return bytes;
@@ -592,10 +535,8 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static byte[] of(final Byte[] boxedBytes) {
-		if (null == boxedBytes) {
-			throw new NullPointerException("Invalid Bytes (not null expected)");
-		}
-		if (0 == boxedBytes.length) {
+		Ensure.notNull("boxedBytes", boxedBytes);
+		if (ObjectArrays.isEmpty(boxedBytes)) {
 			return EMPTY;
 		}
 		final var bytes = new byte[boxedBytes.length];
@@ -613,8 +554,9 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static Byte[] toBoxed(final byte[] bytes) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
+		Ensure.notNull("bytes", bytes);
+		if (isEmpty(bytes)) {
+			return ObjectArrays.empty(Byte.class);
 		}
 		final var boxedBytes = new Byte[bytes.length];
 		for (var i = 0; i < boxedBytes.length; ++i) {
@@ -625,12 +567,12 @@ public final class ByteArrays {
 
 	/**
 	 * <p>Create a {@code byte} array from a {@code boolean}.</p>
-	 * @param b the {@code boolean} to convert
+	 * @param bo the {@code boolean} to convert
 	 * @return the created {@code byte} array
 	 * @since 1.0.0
 	 */
-	public static byte[] ofBoolean(final boolean b) {
-		return singleton(b ? (byte) 1 : (byte) 0);
+	public static byte[] ofBoolean(final boolean bo) {
+		return singleton(bo ? (byte) 1 : (byte) 0);
 	}
 
 	/**
@@ -642,46 +584,40 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean toBoolean(final byte[] bytes) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (1 != bytes.length) {
-			throw new IllegalArgumentException("Invalid bytes length: " + bytes.length + " (equal to 1 expected)");
-		}
+		Ensure.notNull("bytes", bytes);
+		Ensure.equalTo("bytes length", bytes.length, 1);
 		return (byte) 1 == bytes[0];
 	}
 
 	/**
 	 * <p>Create a {@code byte} array from a {@code short} using {@link ByteOrder#nativeOrder()}.</p>
-	 * @param s the {@code short} to convert
+	 * @param sh the {@code short} to convert
 	 * @return the created {@code byte} array
 	 * @since 1.0.0
 	 */
-	public static byte[] ofShort(final short s) {
-		return ofShort(s, ByteOrder.nativeOrder());
+	public static byte[] ofShort(final short sh) {
+		return ofShort(sh, ByteOrder.nativeOrder());
 	}
 
 	/**
 	 * <p>Create a {@code byte} array from a {@code short} using a custom {@code ByteOrder}.</p>
-	 * @param s the {@code short} to convert
+	 * @param sh the {@code short} to convert
 	 * @param order the {@code ByteOrder} to use
 	 * @return the created {@code byte} array
 	 * @throws NullPointerException if the {@code ByteOrder} is {@code null}
 	 * @since 1.0.0
 	 */
-	public static byte[] ofShort(final short s, final ByteOrder order) {
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+	public static byte[] ofShort(final short sh, final ByteOrder order) {
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return of(
-					(byte) (s >> 8),
-					(byte) s
+					(byte) (sh >> 8),
+					(byte) sh
 			);
 		}
 		return of(
-				(byte) s,
-				(byte) (s >> 8)
+				(byte) sh,
+				(byte) (sh >> 8)
 		);
 	}
 
@@ -708,15 +644,9 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static short toShort(final byte[] bytes, final ByteOrder order) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (Short.BYTES != bytes.length) {
-			throw new IllegalArgumentException("Invalid bytes length: " + bytes.length + " (equal to " + Short.BYTES + " expected)");
-		}
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("bytes", bytes);
+		Ensure.equalTo("bytes length", bytes.length, Short.BYTES);
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return (short) (
 					(bytes[0] & 0xff) << 8
@@ -748,9 +678,7 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] ofChar(final char c, final ByteOrder order) {
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return of(
 					(byte) (c >> 8),
@@ -786,15 +714,9 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static char toChar(final byte[] bytes, final ByteOrder order) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (Character.BYTES != bytes.length) {
-			throw new IllegalArgumentException("Invalid bytes length: " + bytes.length + " (equal to " + Character.BYTES + " expected)");
-		}
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("bytes", bytes);
+		Ensure.equalTo("bytes length", bytes.length, Character.BYTES);
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return (char) (
 					(bytes[0] & 0xff) << 8
@@ -826,9 +748,7 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] ofInt(final int i, final ByteOrder order) {
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return of(
 					(byte) (i >> 24),
@@ -868,15 +788,9 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static int toInt(final byte[] bytes, final ByteOrder order) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (Integer.BYTES != bytes.length) {
-			throw new IllegalArgumentException("Invalid bytes length: " + bytes.length + " (equal to " + Integer.BYTES + " expected)");
-		}
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("bytes", bytes);
+		Ensure.equalTo("bytes length", bytes.length, Integer.BYTES);
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return (bytes[0] & 0xff) << 24
 					| (bytes[1] & 0xff) << 16
@@ -908,9 +822,7 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] ofLong(final long l, final ByteOrder order) {
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return of(
 					(byte) (l >> 56),
@@ -958,15 +870,9 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static long toLong(final byte[] bytes, final ByteOrder order) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (Long.BYTES != bytes.length) {
-			throw new IllegalArgumentException("Invalid bytes length: " + bytes.length + " (equal to " + Long.BYTES + " expected)");
-		}
-		if (null == order) {
-			throw new NullPointerException("Invalid ByteOrder (not null expected)");
-		}
+		Ensure.notNull("bytes", bytes);
+		Ensure.equalTo("bytes length", bytes.length, Long.BYTES);
+		Ensure.notNull("order", order);
 		if (ByteOrder.BIG_ENDIAN.equals(order)) {
 			return (long) (bytes[0] & 0xff) << 56
 					| ((long) bytes[1] & 0xff) << 48
@@ -1088,17 +994,15 @@ public final class ByteArrays {
 	 * @param binaryCharSequence the binary {@code CharSequence} to convert
 	 * @return the created {@code byte} array
 	 * @throws NullPointerException if the binary {@code CharSequence} is {@code null}
-	 * @throws IllegalArgumentException if the binary {@code CharSequence} length is not a multiple of {@code 2} or if
+	 * @throws IllegalArgumentException if the binary {@code CharSequence} length is not a multiple of {@code 8} or if
 	 * any {@code char} is not valid
 	 * @since 1.2.0
 	 */
 	public static byte[] ofBinaryString(final CharSequence binaryCharSequence) {
-		if (null == binaryCharSequence) {
-			throw new NullPointerException("Invalid binary CharSequence (not null expected)");
-		}
+		Ensure.notNull("binaryCharSequence", binaryCharSequence);
 		final var length = binaryCharSequence.length();
 		if (0 != length % 8) {
-			throw new IllegalArgumentException("Invalid binary CharSequence length: " + length + " (multiple of 8 expected)");
+			throw new IllegalArgumentException("Invalid binaryCharSequence length: " + ToString.toString(length) + " (multiple of 8 expected)");
 		}
 		if (0 == length) {
 			return EMPTY;
@@ -1108,7 +1012,7 @@ public final class ByteArrays {
 			final var c = binaryCharSequence.charAt(i);
 			final var p = CharArrays.indexOf(BINARY_CHARS, c);
 			if (-1 == p) {
-				throw new IllegalArgumentException("Invalid binary char: " + Strings.quote(c));
+				throw new IllegalArgumentException("Invalid char: " + ToString.toString(c) + " (binary expected)");
 			}
 			bytes[i / 8] <<= 1;
 			bytes[i / 8] |= p;
@@ -1124,23 +1028,21 @@ public final class ByteArrays {
 	 * @since 1.2.0
 	 */
 	public static String toBinaryString(final byte[] bytes) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (0 == bytes.length) {
+		Ensure.notNull("bytes", bytes);
+		if (isEmpty(bytes)) {
 			return Strings.EMPTY;
 		}
 		final var binaryChars = new char[8 * bytes.length];
 		for (var i = 0; i < bytes.length; ++i) {
-			final var b = Byte.toUnsignedInt(bytes[i]);
-			binaryChars[8 * i] = BINARY_CHARS[b >>> 7 & 0b00000001];
-			binaryChars[8 * i + 1] = BINARY_CHARS[b >>> 6 & 0b00000001];
-			binaryChars[8 * i + 2] = BINARY_CHARS[b >>> 5 & 0b00000001];
-			binaryChars[8 * i + 3] = BINARY_CHARS[b >>> 4 & 0b00000001];
-			binaryChars[8 * i + 4] = BINARY_CHARS[b >>> 3 & 0b00000001];
-			binaryChars[8 * i + 5] = BINARY_CHARS[b >>> 2 & 0b00000001];
-			binaryChars[8 * i + 6] = BINARY_CHARS[b >>> 1 & 0b00000001];
-			binaryChars[8 * i + 7] = BINARY_CHARS[b & 0x01];
+			final var v = Byte.toUnsignedInt(bytes[i]);
+			binaryChars[8 * i] = BINARY_CHARS[v >>> 7 & 0b00000001];
+			binaryChars[8 * i + 1] = BINARY_CHARS[v >>> 6 & 0b00000001];
+			binaryChars[8 * i + 2] = BINARY_CHARS[v >>> 5 & 0b00000001];
+			binaryChars[8 * i + 3] = BINARY_CHARS[v >>> 4 & 0b00000001];
+			binaryChars[8 * i + 4] = BINARY_CHARS[v >>> 3 & 0b00000001];
+			binaryChars[8 * i + 5] = BINARY_CHARS[v >>> 2 & 0b00000001];
+			binaryChars[8 * i + 6] = BINARY_CHARS[v >>> 1 & 0b00000001];
+			binaryChars[8 * i + 7] = BINARY_CHARS[v & 0x01];
 		}
 		return new String(binaryChars);
 	}
@@ -1156,12 +1058,10 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static byte[] ofHexString(final CharSequence hexCharSequence) {
-		if (null == hexCharSequence) {
-			throw new NullPointerException("Invalid hexadecimal CharSequence (not null expected)");
-		}
+		Ensure.notNull("hexCharSequence", hexCharSequence);
 		final var length = hexCharSequence.length();
 		if (0 != length % 2) {
-			throw new IllegalArgumentException("Invalid hexadecimal CharSequence length: " + length + " (multiple of 2 expected)");
+			throw new IllegalArgumentException("Invalid hexCharSequence length: " + ToString.toString(length) + " (multiple of 2 expected)");
 		}
 		if (0 == length) {
 			return EMPTY;
@@ -1171,7 +1071,7 @@ public final class ByteArrays {
 			final var c = hexCharSequence.charAt(i);
 			final var p = CharArrays.indexOf(HEX_CHARS, Character.toLowerCase(c));
 			if (-1 == p) {
-				throw new IllegalArgumentException("Invalid hexadecimal char: " + Strings.quote(c));
+				throw new IllegalArgumentException("Invalid char: " + ToString.toString(c) + " (hexadecimal expected)");
 			}
 			bytes[i / 2] <<= 4;
 			bytes[i / 2] |= p;
@@ -1188,17 +1088,15 @@ public final class ByteArrays {
 	 * @since 1.0.0
 	 */
 	public static String toHexString(final byte[] bytes) {
-		if (null == bytes) {
-			throw new NullPointerException("Invalid bytes (not null expected)");
-		}
-		if (0 == bytes.length) {
+		Ensure.notNull("bytes", bytes);
+		if (isEmpty(bytes)) {
 			return Strings.EMPTY;
 		}
 		final var hexChars = new char[2 * bytes.length];
 		for (var i = 0; i < bytes.length; ++i) {
-			final var b = Byte.toUnsignedInt(bytes[i]);
-			hexChars[i * 2] = HEX_CHARS[b >>> 4 & 0b00001111];
-			hexChars[i * 2 + 1] = HEX_CHARS[b & 0b00001111];
+			final var v = Byte.toUnsignedInt(bytes[i]);
+			hexChars[i * 2] = HEX_CHARS[v >>> 4 & 0b00001111];
+			hexChars[i * 2 + 1] = HEX_CHARS[v & 0b00001111];
 		}
 		return new String(hexChars);
 	}
