@@ -23,10 +23,15 @@ SOFTWARE.
 */
 package com.github.alexisjehan.javanilla.lang.array;
 
-import com.github.alexisjehan.javanilla.util.iteration.Iterables;
+import com.github.alexisjehan.javanilla.misc.quality.Ensure;
+import com.github.alexisjehan.javanilla.misc.quality.Equals;
+import com.github.alexisjehan.javanilla.misc.quality.ToString;
 
 import java.lang.reflect.Array;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.WeakHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 /**
@@ -36,7 +41,7 @@ import java.util.concurrent.ThreadLocalRandom;
 public final class ObjectArrays {
 
 	/**
-	 * <p>Map that associates a class type to a cached empty {@code Object} array.</p>
+	 * <p>Map that associates a {@code Class} type to a cached empty {@code Object} array.</p>
 	 * @since 1.2.0
 	 */
 	private static final Map<Class, Object> cachedEmpties = new WeakHashMap<>();
@@ -51,27 +56,25 @@ public final class ObjectArrays {
 
 	/**
 	 * <p>Return an empty {@code Object} array.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param <E> the {@code Object} type
 	 * @return an empty {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type is {@code null}
+	 * @throws NullPointerException if the {@code Class} type is {@code null}
 	 * @since 1.0.0
 	 */
 	@SuppressWarnings("unchecked")
 	public static <E> E[] empty(final Class<E> classType) {
-		if (null == classType) {
-			throw new NullPointerException("Invalid class type (not null expected)");
-		}
+		Ensure.notNull("classType", classType);
 		return (E[]) cachedEmpties.computeIfAbsent(classType, type -> Array.newInstance(type, 0));
 	}
 
 	/**
 	 * <p>Wrap an {@code Object} array replacing {@code null} by an empty one.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param array the {@code Object} array or {@code null}
 	 * @param <E> the {@code Object} type
 	 * @return a non-{@code null} {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type is {@code null}
+	 * @throws NullPointerException if the {@code Class} type is {@code null}
 	 * @since 1.0.0
 	 */
 	public static <E> E[] nullToEmpty(final Class<E> classType, final E[] array) {
@@ -88,9 +91,7 @@ public final class ObjectArrays {
 	 * @since 1.1.0
 	 */
 	public static <E> E[] nullToDefault(final E[] array, final E[] defaultArray) {
-		if (null == defaultArray) {
-			throw new NullPointerException("Invalid default array (not null expected)");
-		}
+		Ensure.notNull("defaultArray", defaultArray);
 		return null != array ? array : defaultArray;
 	}
 
@@ -115,10 +116,10 @@ public final class ObjectArrays {
 	 * @since 1.1.0
 	 */
 	public static <E> E[] emptyToDefault(final E[] array, final E[] defaultArray) {
-		if (null != defaultArray && 0 == defaultArray.length) {
-			throw new IllegalArgumentException("Invalid default array (not empty expected)");
+		if (null != defaultArray) {
+			Ensure.notNullAndNotEmpty("defaultArray", defaultArray);
 		}
-		return null == array || 0 != array.length ? array : defaultArray;
+		return null == array || !isEmpty(array) ? array : defaultArray;
 	}
 
 	/**
@@ -129,88 +130,8 @@ public final class ObjectArrays {
 	 * @since 1.2.0
 	 */
 	public static boolean isEmpty(final Object[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		return 0 == array.length;
-	}
-
-	/**
-	 * <p>Get the first index of the {@code Object} value in the {@code Object} array.</p>
-	 * @param array the {@code Object} array to lookup
-	 * @param value the {@code Object} value to search
-	 * @return the first index of the {@code Object} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code Object} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final Object[] array, final Object value) {
-		return indexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the first index of the {@code Object} value in the {@code Object} array starting from the given index.</p>
-	 * @param array the {@code Object} array to lookup
-	 * @param value the {@code Object} value to search
-	 * @param fromIndex the starting index
-	 * @return the first index of the {@code Object} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code Object} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int indexOf(final Object[] array, final Object value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = fromIndex; i < array.length; ++i) {
-				if (Objects.equals(value, array[i])) {
-					return i;
-				}
-			}
-		}
-		return -1;
-	}
-
-	/**
-	 * <p>Get the last index of the {@code Object} value in the {@code Object} array.</p>
-	 * @param array the {@code Object} array to lookup
-	 * @param value the {@code Object} value to search
-	 * @return the last index of the {@code Object} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code Object} array is {@code null}
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final Object[] array, final Object value) {
-		return lastIndexOf(array, value, 0);
-	}
-
-	/**
-	 * <p>Get the last index of the {@code Object} value in the {@code Object} array starting from the given index.</p>
-	 * @param array the {@code Object} array to lookup
-	 * @param value the {@code Object} value to search
-	 * @param fromIndex the starting index
-	 * @return the last index of the {@code Object} value if found, {@code -1} otherwise
-	 * @throws NullPointerException if the {@code Object} array is {@code null}
-	 * @throws IndexOutOfBoundsException if the starting index is not valid
-	 * @since 1.0.0
-	 */
-	public static int lastIndexOf(final Object[] array, final Object value, final int fromIndex) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 < array.length) {
-			if (0 > fromIndex || array.length - 1 < fromIndex) {
-				throw new IndexOutOfBoundsException("Invalid from index: " + fromIndex + " (between 0 and " + (array.length - 1) + " expected)");
-			}
-			for (var i = array.length - 1; i > fromIndex; --i) {
-				if (Objects.equals(value, array[i])) {
-					return i;
-				}
-			}
-		}
-		return -1;
 	}
 
 	/**
@@ -223,21 +144,14 @@ public final class ObjectArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAny(final Object[] array, final Object... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			for (final var element : array) {
-				if (Objects.equals(value, element)) {
+				if (Equals.equals(value, element)) {
 					return true;
 				}
 			}
@@ -256,22 +170,15 @@ public final class ObjectArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsAll(final Object[] array, final Object... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (Objects.equals(value, element)) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -293,22 +200,15 @@ public final class ObjectArrays {
 	 * @since 1.1.0
 	 */
 	public static boolean containsOnce(final Object[] array, final Object... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var value : values) {
 			var contained = false;
 			for (final var element : array) {
-				if (Objects.equals(value, element)) {
+				if (Equals.equals(value, element)) {
 					if (contained) {
 						return false;
 					}
@@ -332,22 +232,15 @@ public final class ObjectArrays {
 	 * @since 1.0.0
 	 */
 	public static boolean containsOnly(final Object[] array, final Object... values) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == values) {
-			throw new NullPointerException("Invalid values (not null expected)");
-		}
-		if (0 == values.length) {
-			throw new IllegalArgumentException("Invalid values (not empty expected)");
-		}
-		if (0 == array.length) {
+		Ensure.notNull("array", array);
+		Ensure.notNullAndNotEmpty("values", values);
+		if (isEmpty(array)) {
 			return false;
 		}
 		for (final var element : array) {
 			var contained = false;
 			for (final var value : values) {
-				if (Objects.equals(value, element)) {
+				if (Equals.equals(value, element)) {
 					contained = true;
 					break;
 				}
@@ -360,6 +253,98 @@ public final class ObjectArrays {
 	}
 
 	/**
+	 * <p>Get the first index of the {@code Object} value in the {@code Object} array.</p>
+	 * @param array the {@code Object} array to iterate
+	 * @param value the {@code Object} value to search
+	 * @return the first index of the {@code Object} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code Object} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final Object[] array, final Object value) {
+		return indexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the first index of the {@code Object} value in the {@code Object} array starting from the given index.</p>
+	 * @param array the {@code Object} array to iterate
+	 * @param value the {@code Object} value to search
+	 * @param fromIndex the starting index
+	 * @return the first index of the {@code Object} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code Object} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int indexOf(final Object[] array, final Object value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = fromIndex; i < array.length; ++i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Get the last index of the {@code Object} value in the {@code Object} array.</p>
+	 * @param array the {@code Object} array to iterate
+	 * @param value the {@code Object} value to search
+	 * @return the last index of the {@code Object} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code Object} array is {@code null}
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final Object[] array, final Object value) {
+		return lastIndexOf(array, value, 0);
+	}
+
+	/**
+	 * <p>Get the last index of the {@code Object} value in the {@code Object} array starting from the given index.</p>
+	 * @param array the {@code Object} array to iterate
+	 * @param value the {@code Object} value to search
+	 * @param fromIndex the starting index
+	 * @return the last index of the {@code Object} value if found, {@code -1} otherwise
+	 * @throws NullPointerException if the {@code Object} array is {@code null}
+	 * @throws IllegalArgumentException if the starting index is not valid
+	 * @since 1.0.0
+	 */
+	public static int lastIndexOf(final Object[] array, final Object value, final int fromIndex) {
+		Ensure.notNull("array", array);
+		if (!isEmpty(array)) {
+			Ensure.between("fromIndex", fromIndex, 0, array.length - 1);
+			for (var i = array.length - 1; i > fromIndex; --i) {
+				if (Equals.equals(value, array[i])) {
+					return i;
+				}
+			}
+		}
+		return -1;
+	}
+
+	/**
+	 * <p>Calculate the number of occurrences of the {@code Object} value in the {@code Object} array.</p>
+	 * @param array the {@code Object} array to iterate
+	 * @param value the {@code Object} value of the frequency to calculate
+	 * @return the frequency of the {@code Object} value
+	 * @throws NullPointerException if the {@code Object} array is {@code null}
+	 * @since 1.3.0
+	 */
+	public static int frequency(final Object[] array, final Object value) {
+		Ensure.notNull("array", array);
+		if (isEmpty(array)) {
+			return 0;
+		}
+		var frequency = 0;
+		for (final var element : array) {
+			if (Equals.equals(value, element)) {
+				++frequency;
+			}
+		}
+		return frequency;
+	}
+
+	/**
 	 * <p>Shuffle values in the given {@code Object} array using the Fisher-Yates algorithm.</p>
 	 * @see <a href="https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle">https://en.wikipedia.org/wiki/Fisher%E2%80%93Yates_shuffle</a>
 	 * @param array the {@code Object} array to shuffle
@@ -367,9 +352,7 @@ public final class ObjectArrays {
 	 * @since 1.2.0
 	 */
 	public static void shuffle(final Object[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			final var random = ThreadLocalRandom.current();
 			for (var i = 0; i < array.length; ++i) {
@@ -385,9 +368,7 @@ public final class ObjectArrays {
 	 * @since 1.2.0
 	 */
 	public static void reverse(final Object[] array) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
+		Ensure.notNull("array", array);
 		if (1 < array.length) {
 			for (var i = 0; i < array.length / 2; ++i) {
 				swap(array, i, array.length - i - 1);
@@ -400,30 +381,21 @@ public final class ObjectArrays {
 	 * @param array the {@code Object} array to reorder
 	 * @param indexes indexes to use
 	 * @throws NullPointerException if the {@code Object} array or the indexes array is {@code null}
-	 * @throws IllegalArgumentException if {@code Object} array and indexes array lengths are not the same or if
-	 * indexes are not distinct
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if {@code Object} array is empty, if the {@code Object} array length is not
+	 * equal to the indexes array length, if indexes are not distinct or if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void reorder(final Object[] array, final int... indexes) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (null == indexes) {
-			throw new NullPointerException("Invalid indexes (not null expected)");
-		}
-		if (array.length != indexes.length) {
-			throw new IllegalArgumentException("Invalid array and indexes lengths: " + array.length + " and " + indexes.length + " (same expected)");
-		}
+		Ensure.notNullAndNotEmpty("array", array);
+		Ensure.notNull("indexes", indexes);
+		Ensure.equalTo("indexes length", indexes.length, array.length);
 		if (array.length != Arrays.stream(indexes).distinct().count()) {
-			throw new IllegalArgumentException("Invalid indexes (distinct expected)");
+			throw new IllegalArgumentException("Invalid indexes: " + ToString.toString(indexes) + " (distinct expected)");
 		}
 		if (1 < array.length) {
 			for (var i = 0; i < array.length; ++i) {
 				var j = indexes[i];
-				if (0 > j || array.length - 1 < j) {
-					throw new IndexOutOfBoundsException("Invalid index: " + j + " (between 0 and " + (array.length - 1) + " expected)");
-				}
+				Ensure.between("index", j, 0, array.length - 1);
 				while (j < i) {
 					j = indexes[j];
 				}
@@ -438,19 +410,13 @@ public final class ObjectArrays {
 	 * @param index1 the index of the first value
 	 * @param index2 the index of the second value
 	 * @throws NullPointerException if the {@code Object} array is {@code null}
-	 * @throws IndexOutOfBoundsException if any index is not valid
+	 * @throws IllegalArgumentException if any index is not valid
 	 * @since 1.2.0
 	 */
 	public static void swap(final Object[] array, final int index1, final int index2) {
-		if (null == array) {
-			throw new NullPointerException("Invalid array (not null expected)");
-		}
-		if (0 > index1 || array.length - 1 < index1) {
-			throw new IndexOutOfBoundsException("Invalid first index: " + index1 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
-		if (0 > index2 || array.length - 1 < index2) {
-			throw new IndexOutOfBoundsException("Invalid second index: " + index2 + " (between 0 and " + (array.length - 1) + " expected)");
-		}
+		Ensure.notNull("array", array);
+		Ensure.between("index1", index1, 0, array.length - 1);
+		Ensure.between("index2", index2, 0, array.length - 1);
 		if (index1 != index2) {
 			final var value = array[index1];
 			array[index1] = array[index2];
@@ -460,45 +426,34 @@ public final class ObjectArrays {
 
 	/**
 	 * <p>Concatenate multiple {@code Object} arrays.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param arrays the {@code Object} array array to concatenate
 	 * @param <E> the {@code Object} type
 	 * @return the concatenated {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type, the {@code Object} array array or any of them is
-	 * {@code null}
+	 * @throws NullPointerException if the {@code Object} {@code Class} type, the {@code Object} array array or any of
+	 * them is {@code null}
 	 * @since 1.2.0
 	 */
 	@SafeVarargs
 	public static <E> E[] concat(final Class<E> classType, final E[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return concat(classType, Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return concat(classType, List.of(arrays));
 	}
 
 	/**
 	 * <p>Concatenate multiple {@code Object} arrays.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param arrays the {@code Object} array {@code List} to concatenate
 	 * @param <E> the {@code Object} type
 	 * @return the concatenated {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type, the {@code Object} array {@code List} or any of
-	 * them is {@code null}
+	 * @throws NullPointerException if the {@code Class} type, the {@code Object} array {@code List} or any of them is
+	 * {@code null}
 	 * @since 1.2.0
 	 */
 	@SuppressWarnings("unchecked")
 	public static <E> E[] concat(final Class<E> classType, final List<E[]> arrays) {
-		if (null == classType) {
-			throw new NullPointerException("Invalid class type (not null expected)");
-		}
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
+		Ensure.notNull("classType", classType);
+		Ensure.notNullAndNotNullElements("arrays", arrays);
 		final var size = arrays.size();
 		if (0 == size) {
 			return empty(classType);
@@ -517,51 +472,38 @@ public final class ObjectArrays {
 
 	/**
 	 * <p>Join multiple {@code Object} arrays using an {@code Object} array separator.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param separator the {@code Object} array separator
 	 * @param arrays the {@code Object} array array to join
 	 * @param <E> the {@code Object} type
 	 * @return the joined {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type, the {@code Object} array separator, the
-	 * {@code Object} array array or any of them is {@code null}
+	 * @throws NullPointerException if the {@code Class} type, the {@code Object} array separator, the {@code Object}
+	 * array array or any of them is {@code null}
 	 * @since 1.2.0
 	 */
 	@SafeVarargs
 	public static <E> E[] join(final Class<E> classType, final E[] separator, final E[]... arrays) {
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		return join(classType, separator, Arrays.asList(arrays));
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		return join(classType, separator, List.of(arrays));
 	}
 
 	/**
 	 * <p>Join multiple {@code Object} arrays using an {@code Object} array separator.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param separator the {@code Object} array separator
 	 * @param arrays the {@code Object} array {@code List} to join
 	 * @param <E> the {@code Object} type
 	 * @return the joined {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type, the {@code Object} array separator, the
-	 * {@code Object} array {@code List} or any of them is {@code null}
+	 * @throws NullPointerException if the {@code Class} type, the {@code Object} array separator, the {@code Object}
+	 * array {@code List} or any of them is {@code null}
 	 * @since 1.2.0
 	 */
 	@SuppressWarnings("unchecked")
 	public static <E> E[] join(final Class<E> classType, final E[] separator, final List<E[]> arrays) {
-		if (null == classType) {
-			throw new NullPointerException("Invalid class type (not null expected)");
-		}
-		if (null == separator) {
-			throw new NullPointerException("Invalid separator (not null expected)");
-		}
-		if (null == arrays) {
-			throw new NullPointerException("Invalid arrays (not null expected)");
-		}
-		for (final var indexedArray : Iterables.index(arrays)) {
-			if (null == indexedArray.getElement()) {
-				throw new NullPointerException("Invalid array at index " + indexedArray.getIndex() + " (not null expected)");
-			}
-		}
-		if (0 == separator.length) {
+		Ensure.notNull("classType", classType);
+		Ensure.notNull("separator", separator);
+		Ensure.notNullAndNotNullElements("arrays", arrays);
+		if (isEmpty(separator)) {
 			return concat(classType, arrays);
 		}
 		final var size = arrays.size();
@@ -596,26 +538,22 @@ public final class ObjectArrays {
 	 */
 	@SuppressWarnings("unchecked")
 	public static <E> E[] singleton(final E object) {
-		if (null == object) {
-			throw new NullPointerException("Invalid Object (not null expected)");
-		}
+		Ensure.notNull("object", object);
 		return singleton((Class<E>) object.getClass(), object);
 	}
 
 	/**
 	 * <p>Create an {@code Object} array from a single {@code Object} or {@code null}.</p>
-	 * @param classType the {@code Object} class type
+	 * @param classType the {@code Class} type
 	 * @param object the {@code Object} to convert or {@code null}
 	 * @param <E> the {@code Object} type
 	 * @return the created {@code Object} array
-	 * @throws NullPointerException if the {@code Object} class type is {@code null}
+	 * @throws NullPointerException if the {@code Class} type is {@code null}
 	 * @since 1.2.0
 	 */
 	@SuppressWarnings("unchecked")
 	public static <E> E[] singleton(final Class<E> classType, final E object) {
-		if (null == classType) {
-			throw new NullPointerException("Invalid class type (not null expected)");
-		}
+		Ensure.notNull("classType", classType);
 		final var array = (E[]) Array.newInstance(classType, 1);
 		array[0] = object;
 		return array;
@@ -631,9 +569,7 @@ public final class ObjectArrays {
 	 */
 	@SafeVarargs
 	public static <E> E[] of(final E... objects) {
-		if (null == objects) {
-			throw new NullPointerException("Invalid Objects (not null expected)");
-		}
+		Ensure.notNull("objects", objects);
 		return objects;
 	}
 }
