@@ -23,7 +23,13 @@ SOFTWARE.
 */
 package com.github.alexisjehan.javanilla.util.collection;
 
-import java.util.*;
+import com.github.alexisjehan.javanilla.misc.quality.Ensure;
+
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.NavigableMap;
+import java.util.SortedMap;
 
 /**
  * <p>An utility class that provides {@link Map} tools.</p>
@@ -79,70 +85,39 @@ public final class Maps {
 	 * <p>Wrap a {@code Map} replacing {@code null} by a default one.</p>
 	 * @param map the {@code Map} or {@code null}
 	 * @param defaultMap the default {@code Map}
-	 * @param <K> the type of keys maintained by the map
-	 * @param <V> the type of mapped values
 	 * @param <M> the {@code Map} type
 	 * @return a non-{@code null} {@code Map}
 	 * @throws NullPointerException if the default {@code Map} is {@code null}
 	 * @since 1.1.0
 	 */
-	public static <K, V, M extends Map<? extends K, ? extends V>> M nullToDefault(final M map, final M defaultMap) {
-		if (null == defaultMap) {
-			throw new NullPointerException("Invalid default Map (not null expected)");
-		}
+	public static <M extends Map> M nullToDefault(final M map, final M defaultMap) {
+		Ensure.notNull("defaultMap", defaultMap);
 		return null != map ? map : defaultMap;
 	}
 
 	/**
 	 * <p>Wrap a {@code Map} replacing an empty one by {@code null}.</p>
 	 * @param map the {@code Map} or {@code null}
-	 * @param <K> the type of keys maintained by the map
-	 * @param <V> the type of mapped values
+	 * @param <M> the {@code Map} type
 	 * @return a non-empty {@code Map} or {@code null}
 	 * @since 1.0.0
 	 */
-	public static <K, V> Map<K, V> emptyToNull(final Map<K, V> map) {
+	public static <M extends Map> M emptyToNull(final M map) {
 		return emptyToDefault(map, null);
-	}
-
-	/**
-	 * <p>Wrap a {@code SortedMap} replacing an empty one by {@code null}.</p>
-	 * @param sortedMap the {@code SortedMap} or {@code null}
-	 * @param <K> the type of keys maintained by the map
-	 * @param <V> the type of mapped values
-	 * @return a non-empty {@code SortedMap} or {@code null}
-	 * @since 1.0.0
-	 */
-	public static <K, V> SortedMap<K, V> emptyToNull(final SortedMap<K, V> sortedMap) {
-		return emptyToDefault(sortedMap, null);
-	}
-
-	/**
-	 * <p>Wrap a {@code NavigableMap} replacing an empty one by {@code null}.</p>
-	 * @param navigableMap the {@code NavigableMap} or {@code null}
-	 * @param <K> the type of keys maintained by the map
-	 * @param <V> the type of mapped values
-	 * @return a non-empty {@code NavigableMap} or {@code null}
-	 * @since 1.0.0
-	 */
-	public static <K, V> NavigableMap<K, V> emptyToNull(final NavigableMap<K, V> navigableMap) {
-		return emptyToDefault(navigableMap, null);
 	}
 
 	/**
 	 * <p>Wrap a {@code Map} replacing an empty one by a default {@code Map}.</p>
 	 * @param map the {@code Map} or {@code null}
 	 * @param defaultMap the default {@code Map} or {@code null}
-	 * @param <K> the type of keys maintained by the map
-	 * @param <V> the type of mapped values
 	 * @param <M> the {@code Map} type
 	 * @return a non-empty {@code Map} or {@code null}
 	 * @throws IllegalArgumentException if the default {@code Map} is empty
 	 * @since 1.1.0
 	 */
-	public static <K, V, M extends Map<? extends K, ? extends V>> M emptyToDefault(final M map, final M defaultMap) {
-		if (null != defaultMap && defaultMap.isEmpty()) {
-			throw new IllegalArgumentException("Invalid default Map (not empty expected)");
+	public static <M extends Map> M emptyToDefault(final M map, final M defaultMap) {
+		if (null != defaultMap) {
+			Ensure.notNullAndNotEmpty("defaultMap", defaultMap);
 		}
 		return null == map || !map.isEmpty() ? map : defaultMap;
 	}
@@ -159,12 +134,8 @@ public final class Maps {
 	 */
 	@SafeVarargs
 	public static <K, V> boolean putAll(final Map<K, V> map, final Map.Entry<? extends K, ? extends V>... entries) {
-		if (null == map) {
-			throw new NullPointerException("Invalid Map (not null expected)");
-		}
-		if (null == entries) {
-			throw new NullPointerException("Invalid entries (not null expected)");
-		}
+		Ensure.notNull("map", map);
+		Ensure.notNullAndNotNullElements("entries", entries);
 		var result = false;
 		for (final var entry : entries) {
 			map.put(entry.getKey(), entry.getValue());
@@ -174,27 +145,25 @@ public final class Maps {
 	}
 
 	/**
-	 * <p>Create an immutable ordered {@code Map} from multiple entries.</p>
+	 * <p>Create an ordered {@code Map} from multiple entries.</p>
 	 * @param entries the entries array to convert
 	 * @param <K> the type of keys maintained by the map
 	 * @param <V> the type of mapped values
-	 * @return the created immutable ordered {@code Map}
+	 * @return the created ordered {@code Map}
 	 * @throws NullPointerException if the entries array is {@code null}
 	 * @since 1.0.0
 	 */
 	@SafeVarargs
-	public static <K, V> Map<K, V> ofEntriesOrdered(final Map.Entry<? extends K, ? extends V>... entries) {
-		if (null == entries) {
-			throw new NullPointerException("Invalid entries (not null expected)");
-		}
+	public static <K, V> Map<K, V> ofOrdered(final Map.Entry<? extends K, ? extends V>... entries) {
+		Ensure.notNullAndNotNullElements("entries", entries);
 		if (0 == entries.length) {
-			return Collections.emptyMap();
+			return Map.ofEntries();
 		}
 		if (1 == entries.length) {
-			return Collections.singletonMap(entries[0].getKey(), entries[0].getValue());
+			return Map.ofEntries(entries[0]);
 		}
 		final var map = new LinkedHashMap<K, V>(entries.length);
 		putAll(map, entries);
-		return Collections.unmodifiableMap(map);
+		return map;
 	}
 }
